# vincent-alxr-api

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
migrations/2023-07-23-062832_add_extension/: down.sql  up.sql
migrations/2023-07-23-062930_generate_users/: up.sql
migrations/2023-07-23-063024_add_role_to_users/: down.sql  up.sql
migrations/2023-07-23-063047_default_users/: down.sql  up.sql
migrations/2023-07-23-105518_unique_email/: down.sql  up.sql
migrations/2023-07-23-110246_users_has_skills/: down.sql  up.sql
src/: main.rs  schema.rs
src/lib/: mod.rs  models.rs  utils.rs
src/lib/controllers/: auth.rs  users.rs
src/lib/types/: users.rs
