[package]
name = "team"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10.5"
rocket = { version = "=0.5.0-rc.3", features = ["json"]}
diesel = { version = "2.1.0", features = ["postgres", "serde_json"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = { version = "*" }